# FrequencyDictionary

./: CMakeLists.txt  README.md
freq/: CMakeLists.txt  main.cpp
include/: block.h  blockmapper.h  container.h  controller.h  dictionary.h  dictionarycontroller.h  fileblockmapper.h  filemapper.h  mapper.h  node.h  stringblockmapper.h  stringmapper.h  utils.h  worker.h
src/: CMakeLists.txt  container.cpp  controller.cpp  dictionary.cpp  dictionarycontroller.cpp  fileblockmapper.cpp  filemapper.cpp  stringblockmapper.cpp  stringmapper.cpp  utils.cpp  worker.cpp
tests/: CMakeLists.txt  dictonary_tests.cpp
